--- a/index.html
+++ b/index.html
@@ -4,29 +4,26 @@
     <title>
         PRIDE IN HOTEL
     </title>
-</head>
+
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/materialize.css">
 <link rel="stylesheet" href="css/materialize.min.css">
-
-<body>
-    <script src="js/materialize.js"></script>
-    <script src="js/materialize.min.js"></script>
-</body>
-<html>
-
-<head>
-    <title>
-     PRIDE IN HOTEL
-    </title>
-</head>
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/materialize.css">
-<link rel="stylesheet" href="css/materialize.min.css">
-<body>
+<link rel="stylesheet" href="css/set1.css">
 <script src="js/materialize.js"></script>
 <script src="js/materialize.min.js"></script>
+</head>
+<body>
+<div class="grid">
+<figure class="effect-oscar">
+ <video src="img/bg.mp4" autoplay="true" loop="true" muted="true" ></video>
+						<figcaption>
+							<h2>Warm <span>Oscar</span></h2>
+							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+							<a href="#">View more</a>
+						</figcaption>			
+					</figure>
+    </div>
 </body>
 
-</html>
+
 </html>
