--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Four Boxes Slideshow | Demo 1</title>
+		<title>Pride In</title>
 <meta name="description" content="Four Boxes Slideshow: Recreating the background image slideshow seen on Atelier Serge Thoroval's website" />
 		<meta name="keywords" content="background slideshow, boxes, background image, four panels, css, tutorial" />
 		<meta name="author" content="Codrops" />
@@ -47,19 +47,14 @@
 				</nav>
 			</header>
 		</div><!-- /container -->
-		<!----------------------------------------------SLIDER----------------------------------------------------->
+		<!----------------------------------------------POPUP----------------------------------------------------->
 		<div style="display:none;">
-			<!-- Each overlay needs an id. The aria-labelledby is not required but is best practice -->
+		
 			<div id="myOverlay1" aria-labelledby="myOverlay1Heading" data-overlay-container-class="slide-up">
 				<h1 id="myOverlay1Heading">TEST CONTENT 1</h1>
                 <input type="text"/>
 			</div>
-			<div id="myOverlay2" aria-labelledby="myOverlay2Heading" data-overlay-container-class="slide-down">
-				<h1 id="myOverlay2Heading">TEST CONTENT 2</h1>
-			</div>
-			<div id="myOverlay3" aria-labelledby="myOverlay3Heading" data-overlay-container-class="slide-right">
-				<h1 id="myOverlay3Heading">TEST CONTENT 3</h1>
-			</div>
+	
 		</div>
 		
 		<script src="js/classie.js"></script>
