--- a/index.html
+++ b/index.html
@@ -104,41 +104,151 @@
  <!------------------------------------------------------------POPUP COMPARE--------------------------------------------->
             <div id="myOverlay4" aria-labelledby="myOverlay2Heading" data-overlay-container-class="slide-down">
 			<!---------------------westlands-------------------------------------------------->
-			<div class="compare-Hotels">
-           <span>Westlands</span>
+			<div class="compare-Hotels" style="color:#967212">
+           <span >Westlands</span>
            <span>
                <ul class="hotels">
-               <li>.Audio Visual Equipmanet</li>
+               <li>.Audio Visual Equipement</li>
                 <li>.Business Center Services</li>
                 <li>.Hall Hire Only</li>
                 <li>.Hourly hall rental</li>
                 </ul>
            </span>
+           <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+                <li>.28 Deluxe rooms</li>
+
+                </ul>
+           </span>
 			</div>
 			<!---------------------Lantana-------------------------------------------------->
-				<div class="compare-Hotels">
+				<div class="compare-Hotels" style="color:#D71A21">
             <span>Lantana</span>
+            <span>
+               <ul class="hotels">
+               <li>.Bereau De change</li>
+                <li>.Laundry Services</li>
+                <li>.Baby Sitting</li>
+                <li>.Hourly hall rental</li>
+                </ul>
+            </span>
+            <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+                <li>.Stardand rooms-5</li>
+                 <li>.1 bedroom (Balcony-39)</li>
+                  <li>.1 bedroom ( N0 Balcony-39)</li>
+                    <li>.2 Bedroomd -4</li>
+                </ul>
+            </span>
 			</div>
 			<!---------------------Raphta-------------------------------------------------->
 			
-				<div class="compare-Hotels">
+				<div class="compare-Hotels" style="color:green">
             <span>Raphta</span> 
+             <span>
+               <ul class="hotels">
+               <li>.Bereau De change</li>
+                <li>.Laundry Services</li>
+                <li>.Baby Sitting</li>
+                </ul>
+            </span>
+            <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+               <li>.Studio rooms-6</li>
+                <li>.Stardand rooms-16</li>
+                 <li>.1 bedroom 4</li>
+                  <li>.2 bedroom 3</li>
+                    <li>.3 Bedroomd -3</li>
+                </ul>
+            </span>
+            
 			</div>
 			<!---------------------Mombasa-------------------------------------------------->
-				<div class="compare-Hotels">
+				<div class="compare-Hotels" style="color:#340100">
             <span>Mombasa</span> 
+              <span>
+               <ul class="hotels">
+               <li>.24 hour Taxi</li>
+                <li>.Shuttle Services</li>
+                <li>.Personal chef</li>
+                </ul>
+            </span>
+            <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+               <li>.Superioir rooms</li>
+                <li>.Stardand rooms-16</li>
+                 <li>.Deluxe Rooms</li>
+                  <li>.Smoking Rooms</li>
+                    <li>. Non Smoking rooms</li>
+                </ul>
+            </span>
 			</div>
 			<!---------------------Nyali------------------------------------------------->
-			<div class="compare-Hotels">
+			<div class="compare-Hotels" style="color:#088091">
             <span>Nyali</span>
+                 <span>
+               <ul class="hotels">
+               <li>.24 hour Taxi</li>
+                <li>.Shuttle Services</li>
+                <li>.Personal chef</li>
+                </ul>
+            </span>
+            <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+               <li>.Superioir rooms</li>
+                <li>.Stardand rooms-16</li>
+                 <li>.Deluxe Rooms</li>
+                  <li>.Smoking Rooms</li>
+                    <li>. Non Smoking rooms</li>
+                </ul>
+            </span>
 			</div>
 			<!---------------------Diani------------------------------------------------>
 			<div class="compare-Hotels">
            <span>Diani</span>  
+                <span>
+               <ul class="hotels">
+               <li>.24 hour Taxi</li>
+                <li>.Shuttle Services</li>
+                <li>.Personal chef</li>
+                </ul>
+            </span>
+            <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+               <li>.Superioir rooms</li>
+                <li>.Stardand rooms-16</li>
+                 <li>.Deluxe Rooms</li>
+                  <li>.Smoking Rooms</li>
+                    <li>. Non Smoking rooms</li>
+                </ul>
+            </span>
 			</div>
 			<!---------------------ROyal Kitchen------------------------------------------------>
 			<div class="compare-Hotels">
            <span>Royal Kitchen</span> 
+                <span>
+               <ul class="hotels">
+               <li>.24 hour Taxi</li>
+                <li>.Shuttle Services</li>
+                <li>.Personal chef</li>
+                </ul>
+            </span>
+            <span>
+                <ul class="hotels">
+               <li>.ACCOMODATION</li>
+               <li>.Superioir rooms</li>
+                <li>.Stardand rooms-16</li>
+                 <li>.Deluxe Rooms</li>
+                  <li>.Smoking Rooms</li>
+                    <li>. Non Smoking rooms</li>
+                </ul>
+            </span>
 			</div>
 			<!---------------------End------------------------------------------------>
 			
