--- a/index.html
+++ b/index.html
@@ -607,7 +607,9 @@
             <div class="gallery-resort col s12">
                <div class="product-listing col s3" style=" background: url(img/west.jpg); background-size: cover; background-repeat: no-repeat;">
  
-              <a class="book-btn" href="#">
+                 <div class="book-btn">
+                    <span>WESTLANDS</span>
+                 </div>
                   
               </a>
                </div>
