added top links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pride In</title>
+    <title>Pride Inn</title>
     <meta name="description" content="Four Boxes Slideshow: Recreating the background image slideshow seen on Atelier Serge Thoroval's website" />
     <meta name="keywords" content="background slideshow, boxes, background image, four panels, css, tutorial" />
     <meta name="author" content="Codrops" />
@@ -608,19 +608,25 @@
                <div class="product-listing col s3" style=" background: url(img/west.jpg); background-size: cover; background-repeat: no-repeat;">
  
                  <div class="book-btn">
-                    <span>WESTLANDS</span>
+                    <span><a style="color:white;"  href="#">WESTLANDS</a></span>
                  </div>
                   
               </a>
                </div>
                  <div class="product-listing col s3" style=" background: url(img/lant.jpg); background-size: cover; background-repeat: no-repeat;">
- 
+                  <div class="book-btn">
+                    <span><a style="color:white;" href="#">LANTANA</a></span>
+                 </div>
                </div>
                  <div class="product-listing col s3" style=" background: url(img/coast.jpg); background-size: cover; background-repeat: no-repeat;">
- 
+                   <div class="book-btn">
+                    <span><a  style="color:white;" href="#">MOMBASA</a></span>
+                 </div>
                </div>
-                 <div class="product-listing col s3" style=" background: url(img/ddiani.jpg); background-size: cover; background-repeat: no-repeat;">
- 
+            <div class="product-listing col s3" style=" background: url(img/ddiani.jpg); background-size: cover; background-repeat: no-repeat;">
+             <div class="book-btn">
+                    <span><a style="color:white;" href="#">DIANI</a></span>
+                 </div>
                </div>  
           <!-----------------------------------------------------------------------------END----------------------------------->     
             <div class="product-listing col s4" style=" background: url(img/nyal.jpg); background-size: cover; background-repeat: no-repeat;">
