--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
                   <div class="book-btn">
                     <span><a class="cst-links" href="#">LANTANA</a></span>
                  </div>
+                 <div class="text"> <div class="btn-choose">BOOK</div>  </div> 
                </div>
                  <div class="product-listing col s3" style=" background: url(img/coast.jpg); background-size: cover; background-repeat: no-repeat;">
                    <div class="book-btn">
