--- a/westlands.html
+++ b/westlands.html
@@ -4,9 +4,13 @@
     <title>WESTLANDS BRANCH</title>
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/materialize.min.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+<div class="header-ind">
+    
+</div>
 <script src="js/materialize.js"></script>
 <script src="js/materialize.min.js"></script>
 </body>
