--- a/index.html
+++ b/index.html
@@ -610,19 +610,25 @@
         <div class="container">
             <div class="row">'
             <div class="gallery-resort col s12">
-                 <div class="product-listing col s4" style=" background: url(img/lant.jpg); background-size: cover; background-repeat: no-repeat;">
+                <div class="product-listing col s3" style=" background: url(img/west.jpg); background-size: cover; background-repeat: no-repeat;">
                   <div class="book-btn">
                     <span><a class="cst-links" href="#">LANTANA</a></span>
                  </div>
                  <div class="text"> <div class="btn-choose">BOOK</div>  </div> 
                </div>
-                 <div class="product-listing col 4" style=" background: url(img/coast.jpg); background-size: cover; background-repeat: no-repeat;">
+                 <div class="product-listing col s3" style=" background: url(img/lant.jpg); background-size: cover; background-repeat: no-repeat;">
+                  <div class="book-btn">
+                    <span><a class="cst-links" href="#">WESTLANDS</a></span>
+                 </div>
+                 <div class="text"> <div class="btn-choose">BOOK</div>  </div> 
+               </div>
+                 <div class="product-listing col 3" style=" background: url(img/coast.jpg); background-size: cover; background-repeat: no-repeat;">
                    <div class="book-btn">
                     <span><a class="cst-links" href="#">MOMBASA</a></span>
                  </div>
                    <div class="text"> <div class="btn-choose">BOOK</div>  </div>
                </div>
-            <div class="product-listing col s4" style=" background: url(img/ddiani.jpg); background-size: cover; background-repeat: no-repeat;">
+            <div class="product-listing col s3" style=" background: url(img/ddiani.jpg); background-size: cover; background-repeat: no-repeat;">
              <div class="book-btn">
                     <span><a class="cst-links" href="#">DIANI</a></span>
                  </div>
@@ -654,6 +660,7 @@
         </div>
         
     </div></div>
+      
        <div class="footer-end">
        <div class="container">
            <div class="row">
