--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 <!-------------------------------------END-------------------------------------------------------->
 
 <body>
-    <div class="container">
-        <!-- Top Navigation -->
+    <div class="grp">
+       <div class="container">
+           <div class="row">
+                <!-- Top Navigation -->
         <div class="codrops-top clearfix">
             <img class="logo" alt="logo" src="img/logo.png" height="90" width="100">
         </div>
+               
+           </div>
+       </div>
+      
 
         <!------------------------------SLIDER--------------------------------------------------------------->
         <div id="boxgallery" class="boxgallery" data-effect="effect-1">
