westlands.html made responsive

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             <div class="gallery-resort col s12">
                <div class="covered product-listing col s3 "style=" background: url(img/west.jpg); background-size: cover; background-repeat: no-repeat;">
                   <div class="book-btn">
-                    <span><a class="cst-links" href="#">WESTLANDS</a></span>
+                    <span><a class="cst-links" href="westlands.html">WESTLANDS</a></span>
                  </div>
                  <div class="text"> <div class="btn-choose">BOOK</div>  </div> 
                </div>
